objects/Survey__c.object
<CustomObject>
    <description>This object is a child of Contact object. Its aim is to store consumer surveys from MyFeelBack (alimented by MyFeelBack connector).</description>
    <label>MyFeelBack Survey</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Survey Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MyFeelBack Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>MFB__c</fullName>
        <label>MFB Sale ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Purchase after which the consumer was sent a satisfaction survey. Alimented by MyFeelBack connector.</description>
        <label>Sale</label>
        <referenceTo>Sale__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store at which consumer made the purchase for which a satisfaction survey was sent. Alimented by MyFeelBack connector.</description>
        <label>Store</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MFB_Cl__c</fullName>
        <label>MFB Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Survey completion status. Alimented by MyFeelBack connector.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contact related to the survey. Alimented by MyFeelBack connector</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promotor__c</fullName>
        <description>Technical field used for reporting. Formula which shows the value &quot;1&quot; when Recommendation Level is &quot;Promotor&quot;, and &quot;0&quot; if not.</description>
        <formula>IF(ISPICKVAL(Recommendation_Level__c, &quot;Promotor&quot;),1,
0
)</formula>
        <label>Promotor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Detractor__c</fullName>
        <description>Technical field used for reporting. Formula which shows the value &quot;1&quot; when Recommendation Level is &quot;Detractor&quot;, and &quot;0&quot; if not.</description>
        <formula>IF(ISPICKVAL(Recommendation_Level__c, &quot;Detractor&quot;),1,
0
)</formula>
        <label>Detractor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFB_BC_Id__c</fullName>
        <label>MFB BC Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <description>NPS score for each survey. Alimented by MyFeelBack connector.</description>
        <label>NPS Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_URL__c</fullName>
        <description>Survey URL in MyFeelBack. Alimented by MyFeelBack connector.</description>
        <label>Survey URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MFB_Store_ID__c</fullName>
        <label>MFB Store ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Label__c</fullName>
        <description>Survey label (text value). Label is identical for surveys sent inside the same &quot;campaign&quot;. Alimented by MyFeelBack connector.</description>
        <label>Survey Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Email_1__c</fullName>
        <description>This field retrieves Store Email 1 field value. It allows to launch the Store managers and subordonates email alert with Process Builder &quot;Survey : Launch Store managers and subordonates email alert (Invocable)&quot;.</description>
        <label>Store Email 1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Email_2__c</fullName>
        <description>This field retrieves Store Email 2 field value. It allows to launch the Store managers and subordonates email alert with Process Builder &quot;Survey : Launch Store managers and subordonates email alert (Invocable)&quot;.</description>
        <label>Store Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Store_Email_3__c</fullName>
        <description>This field retrieves Store Email 3 field value. It allows to launch the Store managers and subordonates email alert with Process Builder &quot;Survey : Launch Store managers and subordonates email alert (Invocable)&quot;.</description>
        <label>Store Email 3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Survey_Market__c</fullName>
        <formula>LEFT(MFB__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Store__c</fullName>
        <description>Technical field, true if a Store record is attached to the current Survey record. Used in order to make process builder criteria based on store lookup completion.</description>
        <formula>IF(ISBLANK(Store__c), false, true)</formula>
        <label>Existing Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_results__c</fullName>
        <label>Contact results</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Dissatisfied</fullName>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date__c</fullName>
        <description>Date at which the consumer took the satisfaction survey. Alimented by MyFeelBack connector.</description>
        <label>Response Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Client_Contacted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox is true when the store owner calls the client who responded to the survey. Updated by process builder &quot;Task : Check Client Contacted on Survey&quot;.</description>
        <label>Client Contacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_External_Id__c</fullName>
        <description>Survey External Id. Alimented by MyFeelBack connector.</description>
        <externalId>true</externalId>
        <label>Survey External Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Field_BC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Technical Field BC</label>
        <referenceTo>BC__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment_from_Advisor__c</fullName>
        <label>Comment from Advisor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Level__c</fullName>
        <description>Text value based on NPS score. Alimented by Process Builder &quot;Survey: Update Recommendation and Satisfaction Levels&quot;.
- NPS Score &gt;= 9: Promotor
- NPS Score &lt;=6: Detractor
- NPS Score = 7 or 8: Neutral</description>
        <label>Recommendation Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promotor</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_notification_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is populated by a Process Builder when an email alert has been sent on a Survey. It allows to not trigger the email notification a second time, when the record is updated.</description>
        <label>Email notification sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Handling_status_surveys__c</fullName>
        <label>Handling status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone (solved)</fullName>
                </value>
                <value>
                    <fullName>Contacted by email (solved)</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone once - no answer</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone twice - no answer</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone no answer, then contacted by email (solved)</fullName>
                </value>
                <value>
                    <fullName>Contacted by phone &amp; email (not solved)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>